static/style.css
/* Prevents bug in hit event */
#app-box {
	display: flex;
	flex-direction: row;
	padding: 0px;
}
#canvas-box {
	flex: 1 1 ;
	align-items:center;
}

#export-box {
	display: flex;
	border-bottom: 1px solid;
}

#preview-on {
	flex: 1 1 100px;
}

#preview-off {
	display: none;
	flex: 1 1 100px;
}
#export-button {
	flex: 3 1;
	height: 70px;
	font-size: 1.5rem;
	background-color: #a7c7e7;
}

#stat-box {
	/*border-bottom: 1px solid;*/
	flex: 1 4 auto;
}

#settings-box {
	border: 1px solid;
	flex: 1 1;
}

.inside {
	list-style-position: inside;
}

dl {
	line-height: 1.5;
}

.list-head {
	line-height: 2.0;
	font-weight: bold;
}

#settings-form > * {
	padding: 5px;
}

#settings-form input[type='number'] {
	width: 50px;
}

.flex-row {
	display: flex;
	flex-direction: row;
}

.config-label {
	width: 250px;
}

.right-positioned-label {
	padding-left: 10px;
}

.flex-col {
	display: flex;
	flex-direction: column;
}

#control-box {
	flex: 1 1 auto;
}

.box > * {
	padding: 10px;
}
#charter-table {
	padding-top: 20px;
	table-layout: fixed;
	display: table;
	/*flex: 1 1 auto;*/
}

.table-header {
	display: table-header-group;
	font-weight: bold;
}
.table-header-cell{
	display: table-cell;
	/*text-align: center;*/
	border-bottom: 1px solid;
	padding-left: 20px;
	padding-right: 20px;
}
.table-body {
	display: table-row-group;
}
.table-row > * {
	border-bottom: 1px solid;
}

.row-of-interest > * {
	color: #8b4000;
	font-weight: bold;
}

.table-row {
	display: table-row;
}
.table-cell {
	display: table-cell;
	padding: 8px;
	/*text-align: center;*/
}
.header-cell-first {
	width: 50%
}
label {
	padding-left: 30px;
	padding-right: 10px;
}

.label-first-in-line {
	padding-left: 0px;
}


.help .helptext {
	visibility: hidden;
	position: absolute;
	z-index:10;
	background-color: white;
	color: #000;
	text-align: left;
	border-radius: 1px;
	border: 1px solid;
	padding: 5px;
}

.help:hover .helptext {
	visibility: visible;
}


/*#lines-box {
	display: flex;
	flex-direction: column;
}
*/
.line{
	flex: 1 1 auto
}


.medfontsize {
	font-size: 18pt;
}

.line-input-medium {
	width: 100%;
	font-size: 14pt;
}

.line-input-small {
	width: 100%;
	font-size: 10pt;
}

.line-input-xsmall {
	width: 100%;
	font-size: 9pt;
}

.line-transcription {
	display: flex;
}

.hidden-transcription{
	display: none;
}

